fix(be): cache Goong polyline, optimize N+1 driver queries, and auto-calc ETA on consolidate